--- a/project/src/app/roles/auth/home/navbar/navbar.component.html
+++ b/project/src/app/roles/auth/home/navbar/navbar.component.html
@@ -1,1 +1,23 @@
-<p>navbar works!</p>
+<nav class="navbar">
+  <div class="logo">
+    <!-- <img src="assets/logo.png" alt="Desklog.io"> -->
+    <span class="logo-text">TimeTrack</span>
+  </div>
+
+  <ul class="nav-links">
+    <li class="dropdown">
+      Features <i class="chevron-down"></i>
+    </li>
+    <li class="dropdown">
+      Resources <i class="chevron-down"></i>
+    </li>
+    <li>Download</li>
+    <li>Demo</li>
+    <li>Pricing</li>
+  </ul>
+
+  <div class="nav-actions">
+    <button class="btn-login">Login</button>
+    <button class="btn-start">Start Free <span class="arrow">›</span></button>
+  </div>
+</nav>
