--- a/project/src/app/roles/auth/home/navbar/navbar.component.html
+++ b/project/src/app/roles/auth/home/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar" [class.scrolled]="isScrolled">
   <div class="logo">
     <!-- <img src="assets/logo.png" alt="Desklog.io"> -->
     <span class="logo-text">TimeTrack</span>
