--- a/project/src/app/roles/auth/home/features/features.component.html
+++ b/project/src/app/roles/auth/home/features/features.component.html
@@ -1,4 +1,4 @@
-<section class="features-section">
+<section class="features-section" id="features">
   <div class="container">
     <div class="section-header">
       <h4 class="sub-title">FEATURES</h4>
