--- a/project/src/app/roles/auth/home/navbar/navbar.component.html
+++ b/project/src/app/roles/auth/home/navbar/navbar.component.html
@@ -5,16 +5,12 @@
   </div>
 
   <ul class="nav-links">
-    <li class="dropdown">
-      Features <i class="chevron-down"></i>
-    </li>
-    <li class="dropdown">
-      Resources <i class="chevron-down"></i>
-    </li>
-    <li>Download</li>
-    <li>Demo</li>
-    <li>Pricing</li>
-  </ul>
+    <li class="nav-item" (click)="scrollTo('features')">Features</li>
+    <li class="nav-item" (click)="scrollTo('about')">About</li>
+    <li class="nav-item" (click)="scrollTo('contact')">Contact</li>
+  
+</ul>
+  
 
   <div class="nav-actions">
     <button class="btn-login">Login</button>
