--- a/project/src/styles.css
+++ b/project/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  scroll-behavior: smooth !important;
+  scroll-padding-top: 100px; /* This prevents the navbar from covering the title */
+}
